
compile.xsl
----------------------
* Ignore empty lines. Patch by Brad Clarke (note: this is now obsolete for new logfiles but still useful for old ones)

Compound
----------------------
* New SourceControl implementation uses nested Trigger and Target sourcecontrols. The targets are only checked for changes if there is a change detected by a trigger. Submitted by Will Gwaltney

CVS
----------------------
* Fixed a bug with not returning modfications when the tag attribute is used.

controlpanel.jsp
----------------------
* Replace link with iframe showing JMX interface. Patch by Archibald Bartleman

CruiseControlController
----------------------
* On a new project (no serialized project found) force a build. This is to aid setting up CruiseControl as you will not need to wait for a modification.
* Now parses plugin definitions defined directly under the <cruisecontrol> root-element in the config file. 
  These are defined for all projects, but can still be overridden per project.

distributables.xsl
----------------------
* Added info for the ejbjar and ear tasks. Patch by Joris Kuipers

EmailPublisher
----------------------
* Send build notification emails to all valid recipients and not to fail build even if some of the email addresses were rejected by SMTP rely. Patch Igor Fredorenko

FileServlet
----------------------
* write(stream) now uses buffered IO. Patch by Garrick Olson

HTMLEmailBuilder
----------------------
* Delete temp files after they've been used. Patch by Joris Kuipers

HttpFile
----------------------
* New sourcecontrol that reports changes if a web page has been changed. Patch by Brad Clarke

index.jsp
----------------------
* Sort projects. Patch by Brad Clarke

JDOM support
----------------------
* Upgraded from version b7 to version b9

jmx
----------------------
* Now using MX4J instead of Sun's reference implementation. Patch by Michael Kloss
* Added RMI adapter. Patch by Michael Beauregard

Main
----------------------