@@ -42,7 +42,20 @@
 
 # Inspired by Ant's wrapper script
 if [ -z "$CCDIR" ] ; then
-  PRG=$0
+  # resolve links - $0 may be a softlink
+  PRG="$0"
+
+  # need this for relative symlinks
+  while [ -h "$PRG" ] ; do
+    ls=`ls -ld "$PRG"`
+    link=`expr "$ls" : '.*-> \(.*\)$'`
+    if expr "$link" : '/.*' > /dev/null; then
+      PRG="$link"
+    else
+      PRG=`dirname "$PRG"`"/$link"
+    fi
+  done
+
   saveddir=`pwd`
 
   CCDIR=`dirname "$PRG"`/..
